Implemented role-based authentication and minor fixes in the project